# Fish_Line_Slicer

./: CMakeLists.txt
boards/arm/nucleo_L432kc_FISH/: nucleo_l432kc.dts  nucleo_l432kc_defconfig
custom_drivers/dts/bindings/fish_items/: A4988.yaml  HD44780UI2C.yaml  keypad.yaml  servo.yaml
custom_drivers/zephyr/: CMakeLists.txt  Kconfig
custom_drivers/zephyr/buttons/: CMakeLists.txt  Kconfig  keypad.c
custom_drivers/zephyr/include/: buttons.h  lcd_i2c.h  servo.h  stepper.h
custom_drivers/zephyr/lcd/: CMakeLists.txt  Kconfig  hd44780uic.c
custom_drivers/zephyr/servo/: CMakeLists.txt  Kconfig  standard_servo.c
custom_drivers/zephyr/stepper/: CMakeLists.txt  Kconfig  a4988.c
src/: cut_struct.h  lcd_manager.c  lcd_manager.h  main.c
